Fix spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Fira Sans", serif;
+  font-family: "Fira Sans", "Arial", serif;
   color: #2e2e2e;
   line-height: 150%;
 }
